--- a/uber/requirements.txt
+++ b/uber/requirements.txt
@@ -17,11 +17,14 @@ certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
 comm==0.2.0
+contourpy==1.2.1
+cycler==0.12.1
 debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
 executing==2.0.1
 fastjsonschema==2.19.0
+fonttools==4.51.0
 fqdn==1.5.1
 grapheme==0.6.0
 idna==3.6
@@ -52,8 +55,10 @@ jupyterlab-widgets==3.0.9
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.25.2
 keyring==25.2.1
+kiwisolver==1.4.5
 lz4==4.3.3
 MarkupSafe==2.1.3
+matplotlib==3.9.0
 matplotlib-inline==0.1.6
 mistune==3.0.2
 more-itertools==10.2.0
@@ -61,6 +66,7 @@ nbclient==0.9.0
 nbconvert==7.11.0
 nbformat==5.9.2
 nest-asyncio==1.5.8
+networkx==3.3
 notebook==7.0.6
 notebook_shim==0.2.3
 numpy==1.26.2
@@ -70,6 +76,7 @@ pandas==2.1.3
 pandocfilters==1.5.0
 parso==0.8.3
 pexpect==4.9.0
+pillow==10.3.0
 platformdirs==4.0.0
 prometheus-client==0.19.0
 prompt-toolkit==3.0.41
@@ -79,6 +86,7 @@ pure-eval==0.2.2
 pycparser==2.21
 pycryptodome==3.20.0
 Pygments==2.17.2
+pyparsing==3.1.2
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-json-logger==2.0.7
@@ -92,6 +100,7 @@ requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.13.1
+scipy==1.13.0
 Send2Trash==1.8.2
 six==1.16.0
 sniffio==1.3.0
