--- a/uber/requirements.txt
+++ b/uber/requirements.txt
@@ -1,4 +1,5 @@
 about-time==4.2.1
+affine==2.4.0
 alive-progress==3.1.5
 anyio==4.1.0
 appnope==0.1.3
@@ -16,7 +17,11 @@ browsercookie==0.7.8
 certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
 comm==0.2.0
+contextily==1.6.0
 contourpy==1.2.1
 cycler==0.12.1
 debugpy==1.8.0
@@ -24,8 +29,12 @@ decorator==5.1.1
 defusedxml==0.7.1
 executing==2.0.1
 fastjsonschema==2.19.0
+fiona==1.9.6
 fonttools==4.51.0
 fqdn==1.5.1
+geographiclib==2.0
+geopandas==0.14.4
+geopy==2.4.1
 grapheme==0.6.0
 idna==3.6
 importlib_metadata==7.1.0
@@ -38,6 +47,7 @@ jaraco.context==5.3.0
 jaraco.functools==4.0.1
 jedi==0.19.1
 Jinja2==3.1.2
+joblib==1.4.2
 json5==0.9.14
 jsonpointer==2.4
 jsonschema==4.20.0
@@ -60,6 +70,7 @@ lz4==4.3.3
 MarkupSafe==2.1.3
 matplotlib==3.9.0
 matplotlib-inline==0.1.6
+mercantile==1.2.1
 mistune==3.0.2
 more-itertools==10.2.0
 nbclient==0.9.0
@@ -75,6 +86,7 @@ packaging==23.2
 pandas==2.1.3
 pandocfilters==1.5.0
 parso==0.8.3
+patsy==0.5.6
 pexpect==4.9.0
 pillow==10.3.0
 platformdirs==4.0.0
@@ -87,6 +99,7 @@ pycparser==2.21
 pycryptodome==3.20.0
 Pygments==2.17.2
 pyparsing==3.1.2
+pyproj==3.6.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-json-logger==2.0.7
@@ -95,17 +108,22 @@ PyYAML==6.0.1
 pyzmq==25.1.1
 qtconsole==5.5.1
 QtPy==2.4.1
+rasterio==1.3.10
 referencing==0.31.0
 requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.13.1
 scipy==1.13.0
+seaborn==0.13.2
 Send2Trash==1.8.2
+shapely==2.0.4
 six==1.16.0
 sniffio==1.3.0
+snuggs==1.4.7
 soupsieve==2.5
 stack-data==0.6.3
+statsmodels==0.14.2
 terminado==0.18.0
 tinycss2==1.2.1
 tornado==6.4
@@ -120,4 +138,5 @@ webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.6.4
 widgetsnbextension==4.0.9
+xyzservices==2024.4.0
 zipp==3.18.1
